--- a/mobile.html
+++ b/mobile.html
@@ -27,7 +27,7 @@ input.empty { color: #888; }
 input.focused { border: 1px solid #AAA !important }
 input.inflight { border: 1px solid #BCF !important }
 
-span.tootltip_wrap { position: relative; }
+span.tooltip_wrap { position: relative; }
 span.tooltip input { margin-right: 0; font-size: 80% }
 span.tooltip { 
   position: absolute;
